--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Connect Abdul Mateen</title>
+        <title>Connect Hamza Naveed</title>
         <link rel="stylesheet" href="./Styles/index.css" />
         <link rel="stylesheet" href="./Styles/search-bar.css" />
         <link rel="stylesheet" href="bg.css" />
@@ -58,42 +58,42 @@
                 id="my-image"
                 class="scale"
                 src="/Images/front img white bg.jpg"
-                alt="Abdul Mateen's Picture with a black and white background"
+                alt="Hamza's Picture with a black and white background"
             />
-            <h1>Abdul Mateen</h1>
+            <h1>Hamza Naveed</h1>
             <p>
-                Howdy, I'm Abdul Mateen. I'm a passionate Tech Lover from
-                Lahore, apart from that I'm a Web Developer and an CyberSecurity
-                enthusiast Inspired by Imagination.
+                Hamza Naveed blends expertise in Android app creation, web development, and WordPress with a deep knowledge of SEO. A digital craftsman, he ensures every project is both user-centric and highly visible online."
+
+
             </p>
             <hr />
         </div>
         <div id="main">
-            <a href="https://facebook.com/abdulmateenzwl" target="_blank">
+            <a href="https://web.facebook.com/hamxa.jadun" target="_blank">
                 <div class="card blue-bg white-color scale">
                     <i class="fa-brands fa-facebook fa-2x"></i>
                     <p><strong>Facebook</strong></p>
                 </div>
             </a>
-            <a href="https://instagram.com/abdulmateenzwl" target="_blank">
+            <a href="https://www.instagram.com/hamza.jadun" target="_blank">
                 <div class="card pink-bg white-color scale">
                     <i class="fa-brands fa-instagram fa-2x"></i>
                     <p><strong>Instagram</strong></p>
                 </div>
             </a>
-            <a href="https://linkedin.com/in/abdulmateenzwl" target="_blank">
+            <a href="https://www.linkedin.com/in/jadoonhamxa/" target="_blank">
                 <div class="card dark-blue-bg white-color scale">
                     <i class="fa-brands fa-linkedin fa-2x"></i>
                     <p><strong>LinkedIn</strong></p>
                 </div>
             </a>
-            <a href="https://github.com/abdulmateenzwl" target="_blank">
+            <a href="https://github.com/HamzaJadun" target="_blank">
                 <div class="card purple-bg white-color scale">
                     <i class="fa-brands fa-github fa-2x"></i>
                     <p><strong>Github</strong></p>
                 </div>
             </a>
-            <a href="https://youtube.com/@abdulmateenzwl" target="_blank">
+            <a href="https://youtube.com/@HamzaJadun?si=J_Jp85UGg-uU9y0t" target="_blank">
                 <div class="card red-bg white-color scale">
                     <i class="fa-brands fa-youtube fa-2x"></i>
                     <p><strong>YouTube</strong></p>
@@ -105,56 +105,56 @@
                     <p><strong>Twitter</strong></p>
                 </div>
             </a>
-            <a href="https://wa.me/923101524679">
+            <a href="https://wa.me/923021084557">
                 <div class="card green-bg white-color scale">
                     <i class="fa-brands fa-whatsapp fa-2x"></i>
                     <p><strong>Whatsapp</strong></p>
                 </div>
             </a>
-            <a href="https://telegram.me/abdulmateenzwl" target="_blank">
+            <a href="https://telegram.me/HumzaJadoon" target="_blank">
                 <div class="card dark-blue-bg white-color scale">
                     <i class="fa-brands fa-telegram fa-2x"></i>
                     <p><strong>Telegram</strong></p>
                 </div>
             </a>
-            <a href="https://m.me/abdulmateenzwl" target="_blank">
+            <a href="https://m.me/hamxa.jadun" target="_blank">
                 <div class="card dark-blue-bg white-color scale">
                     <i class="fa-brands fa-facebook-messenger fa-2x"></i>
                     <p><strong>Messenger</strong></p>
                 </div>
             </a>
-            <a href="mailto:abdulmateenzwl@gmail.com">
+            <a href="mailto:jadoonhamxa@gmail.com">
                 <div class="card light-red-bg white-color scale">
                     <i class="fa-regular fa-envelope fa-2x"></i>
                     <p><strong>Gmail</strong></p>
                 </div>
             </a>
-            <a href="https://threads.net/@abdulmateenzwl" target="_blank">
+            <a href="https://threads.net/@hamza.jadun" target="_blank">
                 <div class="card black-bg white-color scale">
                     <i class="fa-regular fa-at fa-2x"></i>
                     <p><strong>Threads</strong></p>
                 </div>
             </a>
-            <a href="https://LeetCode.com/abdulmateenzwl" target="_blank">
+            <a href="https://LeetCode.com/" target="_blank">
                 <div class="card orange-bg2 white-color scale">
                     <i class="fa-solid fa-terminal fa-2x"></i>
                     <p><strong>LeetCode</strong></p>
                 </div>
             </a>
-            <a href="https://Hackerrank.com/abdulmateenzwl" target="_blank">
+            <a href="https://www.hackerrank.com/jadoonhamxa" target="_blank">
                 <div class="card dark-green-bg white-color scale">
                     <i class="fa-solid fa-terminal fa-2x"></i>
                     <p><strong>HackerRank</strong></p>
                 </div>
             </a>
-            <a href="https://Hackerearth.com/@abdulmateenzwl" target="_blank">
+            <a href="https://Hackerearth.com/" target="_blank">
                 <div class="card dark-blue-bg2 white-color scale">
                     <i class="fa-solid fa-terminal fa-2x"></i>
                     <p><strong>HackerEarth</strong></p>
                 </div>
             </a>
             <a
-                href="https://www.codewars.com/users/abdulmateenzwl"
+                href="https://www.codewars.com/users/HamzaJadoon"
                 target="_blank"
             >
                 <div class="card dark-red-bg white-color scale">
@@ -163,7 +163,7 @@
                 </div>
             </a>
             <a
-                href="https://auth.geeksforgeeks.org/user/abdulmateenzwl"
+                href="https://auth.geeksforgeeks.org/"
                 target="_blank"
             >
                 <div class="card green-bg white-color scale">
@@ -171,14 +171,14 @@
                     <p><strong>GeeksforGeeks</strong></p>
                 </div>
             </a>
-            <a href="https://about.me/abdulmateenzwl" target="_blank">
+            <a href="https://about.me/" target="_blank">
                 <div class="card pink-bg white-color scale">
                     <i class="fa-solid fa-user fa-2x"></i>
                     <p><strong>About Me</strong></p>
                 </div>
             </a>
             <a
-                href="https://monkeytype.com/profile/abdulmateenzwl"
+                href="https://monkeytype.com/"
                 target="_blank"
             >
                 <div class="card yellow-bg white-color scale">
@@ -186,20 +186,20 @@
                     <p><strong>Monkey Type</strong></p>
                 </div>
             </a>
-            <a href="https://gitlab.com/abdulmateenzwl" target="_blank">
+            <a href="https://gitlab.com/" target="_blank">
                 <div class="card orange-bg white-color scale">
                     <i class="fa-brands fa-gitlab fa-2x"></i>
                     <p><strong>GitLab</strong></p>
                 </div>
             </a>
-            <a href="https://cal.com/abdulmateenzwl" target="_blank">
+            <a href="https://cal.com/" target="_blank">
                 <div class="card black-bg white-color scale">
                     <i class="fa-solid fa-calendar-check fa-2x"></i>
                     <p><strong>Cal.com</strong></p>
                 </div>
             </a>
             <a
-                href="https://www.codechef.com/users/abdulmateenzwl"
+                href="https://www.codechef.com/"
                 target="_blank"
             >
                 <div class="card brown-bg white-color scale">
@@ -207,14 +207,14 @@
                     <p><strong>Code Chef</strong></p>
                 </div>
             </a>
-            <a target="_blank" href="https://codepen.io/abdulmateenzwl">
+            <a target="_blank" href="https://codepen.io/">
                 <div class="card black-bg white-color scale">
                     <i class="fa-brands fa-codepen fa-2x"></i>
                     <p><strong>CodePen</strong></p>
                 </div>
             </a>
             <a
-                href="https://www.chess.com/bs/member/abdulmateenzwl"
+                href="https://www.chess.com/"
                 target="_blank"
             >
                 <div class="card green-bg white-color scale">
@@ -223,7 +223,7 @@
                 </div>
             </a>
             <a
-                href="https://stackoverflow.com/users/19561209/abdulmateenzwl"
+                href="https://stackoverflow.com/users/15661080/hamza-jadoon"
                 target="_blank"
             >
                 <div class="card orange-bg2 white-color scale">
@@ -233,7 +233,7 @@
             </a>
 
             <a
-                href="https://stackexchange.com/users/25822352/abdulmateenzwl"
+                href="https://stackexchange.com/"
                 target="_blank"
             >
                 <div class="card dark-blue-bg white-color scale">
@@ -242,20 +242,20 @@
                 </div>
             </a>
 
-            <a href="https://patreon.com/abdulmateenzwl" target="_blank">
+            <a href="https://patreon.com/" target="_blank">
                 <div class="card black-bg white-color scale">
                     <i class="fa-brands fa-patreon fa-2x"></i>
                     <p><strong>Patreon</strong></p>
                 </div>
             </a>
-            <a href="https://ko-fi.com/abdulmateenzwl" target="_blank">
+            <a href="https://ko-fi.com/" target="_blank">
                 <div class="card pink-bg white-color scale">
                     <i class="fa-solid fa-mug-hot fa-2x"></i>
                     <p><strong>ko-fi</strong></p>
                 </div>
             </a>
             <a
-                href="https://www.buymeacoffee.com/abdulmateenzwl"
+                href="https://www.buymeacoffee.com/"
                 target="_blank"
             >
                 <div class="card yellow-bg white-color scale">
@@ -263,7 +263,7 @@
                     <p><strong>Buymeacoffee</strong></p>
                 </div>
             </a>
-            <a href="https://www.behance.net/Abdulmateenzwl" target="_blank">
+            <a href="https://www.behance.net/" target="_blank">
                 <div class="card black-bg white-color scale">
                     <i class="fa-brands fa-behance fa-2x"></i>
                     <p><strong>Behance</strong></p>
@@ -314,14 +314,14 @@
                     <p><strong>TikTok</strong></p>
                 </div>
             </a>
-            <a href="https://snapchat.com/add/abdulmateenzwl" target="_blank">
+            <a href="https://snapchat.com/add/hamza.jadun" target="_blank">
                 <div class="card yellow-bg white-color scale">
                     <i class="fa-brands fa-snapchat fa-2x"></i>
                     <p><strong>SnapChat</strong></p>
                 </div>
             </a>
             <a
-                href="https://www.quora.com/profile/Abdul-Mateen-1199"
+                href="https://www.quora.com/"
                 target="_blank"
             >
                 <div class="card light-red-bg white-color scale">
@@ -329,14 +329,14 @@
                     <p><strong>Quora</strong></p>
                 </div>
             </a>
-            <a href=" https://post.news/@/abdulmateenzwl" target="_blank">
+            <a href=" https://post.news/" target="_blank">
                 <div class="card blue-bg white-color scale">
                     <i class="fa-solid fa-newspaper fa-2x"></i>
                     <p><strong>Post.NEWS</strong></p>
                 </div>
             </a>
             <a
-                href="https://www.reddit.com/user/abdulmateenzwl/"
+                href="https://www.reddit.com//"
                 target="_blank"
             >
                 <div class="card red-bg white-color scale">
@@ -345,7 +345,7 @@
                 </div>
             </a>
             <a
-                href="https://www.strava.com/athletes/abdulmateenzwl"
+                href="https://www.strava.com/"
                 target="_blank"
             >
                 <div class="card light-red-bg white-color scale">
@@ -353,26 +353,26 @@
                     <p><strong>Strava</strong></p>
                 </div>
             </a>
-            <a href="https://www.dev.to/abdulmateenzwl" target="_blank">
+            <a href="https://www.dev.to/" target="_blank">
                 <div class="card black-bg white-color scale">
                     <i class="fa-brands fa-dev fa-2x"></i>
                     <p><strong>dev.to</strong></p>
                 </div>
             </a>
-            <a href="https://www.pinterest.com/AbdulMateenzwl/" target="_blank">
+            <a href="https://www.pinterest.com/" target="_blank">
                 <div class="card red-bg white-color scale">
                     <i class="fa-brands fa-pinterest fa-2x"></i>
                     <p><strong>Pinterest</strong></p>
                 </div>
             </a>
-            <a href="https://abdulmateenzwl.medium.com" target="_blank">
+            <a href="medium.com" target="_blank">
                 <div class="card black-bg white-color scale">
                     <i class="fa-brands fa-medium fa-2x"></i>
                     <p><strong>Medium</strong></p>
                 </div>
             </a>
             <a
-                href="https://en.wikipedia.org/wiki/User:Abdulmateenzwl"
+                href="https://en.wikipedia.org/"
                 target="_blank"
             >
                 <div class="card black-bg white-color scale">
@@ -381,7 +381,7 @@
                 </div>
             </a>
             <a
-                href="https://www.upwork.com/freelancers/~01b9acb2a82da834f1"
+                href="https://www.upwork.com/"
                 target="_blank"
             >
                 <div class="card green-bg white-color scale">
@@ -389,14 +389,14 @@
                     <p><strong>UpWork</strong></p>
                 </div>
             </a>
-            <a href="https://www.fiverr.com/abdulmateenzwl" target="_blank">
+            <a href="https://www.fiverr.com" target="_blank">
                 <div class="card dark-green-bg white-color scale">
                     <i class="fa-solid fa-briefcase fa-2x"></i>
                     <p><strong>Fiverr</strong></p>
                 </div>
             </a>
             <a
-                href="https://www.researchgate.net/profile/Abdul-Mateen-55"
+                href="https://www.researchgate.net/profile/"
                 target="_blank"
             >
                 <div class="card black-bg white-color scale">
@@ -404,7 +404,7 @@
                     <p><strong>Research Gate</strong></p>
                 </div>
             </a>
-            <a href="https://abdulmateenzwl.Wordpress.com" target="_blank">
+            <a href="Wordpress.com" target="_blank">
                 <div class="card dark-blue-bg white-color scale">
                     <i class="fa-brands fa-wordpress fa-2x"></i>
                     <p><strong>WordPress</strong></p>
