--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
             <img
                 id="my-image"
                 class="scale"
-                src="/Images/front img white bg.jpg"
-                alt="Hamza's Picture with a black and white background"
+                src="/Images/hamza.jpg"
             />
             <h1>Hamza Naveed</h1>
             <p>
