--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img
                 id="my-image"
                 class="scale"
-                src="/Images/hamza.jpg"
+                src="hamza.jpg"
             />
             <h1>Hamza Naveed</h1>
             <p>
