--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
         <footer>
             <p class="text-center">
                 Made with <i class="fa-solid fa-heart red-color"></i> by
-                <a href="https://instagram.com/abdulmateenzwl" target="_blank"
-                    >Abdul Mateen</a
+                <a href="https://www.instagram.com/hamza.jadun" target="_blank"
+                    >Hamza Jadoon</a
                 >
             </p>
         </footer>
