--- a/index.html
+++ b/index.html
@@ -178,10 +178,9 @@
 
         <footer>
             <p class="text-center">
-                Made with <i class="fa-solid fa-heart red-color"></i> by
+              <center>  Made with <i class="fa-solid fa-heart red-color"></i> by
                 <a href="https://www.instagram.com/hamza.jadun" target="_blank"
-                    >Hamza Jadoon</a
-                >
+                    >Hamza Jadoon</a ></center>
             </p>
         </footer>
 
