--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p><strong>YouTube</strong></p>
                 </div>
             </a>
-            <a href="https://twitter.com/abdulmateenzwl" target="_blank">
+            <a href="https://twitter.com/" target="_blank">
                 <div class="card dark-blue-bg white-color scale">
                     <i class="fa-brands fa-twitter fa-2x"></i>
                     <p><strong>Twitter</strong></p>
