--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             <img
                 id="my-image"
                 class="scale"
-                src="https://i.ibb.co/HP0djZz/Capture.jpg"
+                src="https://i.ibb.co/pnBNdQ1/Capture.jpg"
             />
             <h1>Hamza Naveed</h1>
             <p>
-                Hamza Naveed blends expertise in Android app creation, web development, and WordPress with a deep knowledge of SEO. A digital craftsman, he ensures every project is both user-centric and highly visible online."
+                Hamza Naveed blends expertise in Android app creation, web development, and WordPress with a deep knowledge of SEO. A digital craftsman, he ensures every project is both user-centric and highly visible online.
 
 
             </p>
