--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img
                 id="my-image"
                 class="scale"
-                src="https://i.ibb.co/TrZp58X/Capture.jpg"
+                src="https://i.ibb.co/qDQbv1g/Capture.jpg"
             />
             <h1>Hamza Naveed</h1>
             <p>
