--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img
                 id="my-image"
                 class="scale"
-                src="https://i.ibb.co/FYY74Pj/Capture.jpg"
+                src="https://avatars.githubusercontent.com/u/81479337?v=4g"
             />
             <h1>Hamza Naveed</h1>
             <p>
