--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img
                 id="my-image"
                 class="scale"
-                src="https://img.freepik.com/premium-vector/hello-world-is-simple-word-programmer-s-first-programming_48644-298.jpg"
+                src="https://avatars.githubusercontent.com/u/81479337?v=4"
             />
             <h1>Hamza Naveed</h1>
             <p>
